# VibeCheck

./: .gitignore  Dockerfile  README.md  app.py  compose.yml  pyproject.toml  requirements.txt
api/: __init__.py  main.py  schemas.py  stats.py
api/routes/: analysis.py  upload.py
src/: __init__.py  analyzers.py  parser.py  utils.py
