[project]
name = "chat"
version = "1.0.0"
description = "WhatsApp Chat Analyzer with Streamlit UI and FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.15.0",
    "seaborn>=0.13.2",
    "streamlit>=1.53.1",
    "textblob>=0.19.0",
    "wordcloud>=1.9.6",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "pandas>=2.3.3",
]

